<resources>
    <string name="app_name">Best Wishes</string>
    <string name="app_icon">App Icon</string>
    <string name="app_version">v1.0</string>
    <string name="about_app">About App</string>
    <string name="Holidays">Holidays</string>
    <string name="Birthdays">Birthdays</string>
    <string name="Events">Events</string>
    <string name="textLess24">Less 24h</string>
    <string name="textNow">Today</string>
    <string name="textFinish">finished</string>
    <string name="bookmark_icon">bookmark icon</string>
    <string name="days_from_holiday">356 days</string>
    <string name="description">Description</string>
    <string name="holiday_name">Holiday name</string>
    <string name="holiday_picture">Holiday picture</string>
    <string name="add_new_holiday">Add new holiday</string>
    <string name="new_holiday">New Holiday</string>
    <string name="author">App Author:</string>
    <string name="author_name">Solomin Andrey</string>
    <string name="author_email" translatable="false">solomin.andrey@gmail.com</string>
    <string name="designer">App Designer:</string>
    <string name="designer_name">Gorshkov Oleg</string>
    <string name="designer_email" translatable="false">grr.oleg@gmail.com</string>


    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="few">%d days</item>
        <item quantity="many">%d days</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="hours">
        <item quantity="one">%d hour</item>
        <item quantity="few">%d hours</item>
        <item quantity="many">%d hours</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <string name="fullscreen_ad_unit_id" translatable="false">ca-app-pub-8994936165518589/4453030159</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8994936165518589/3115897750</string>
    <string name="edit_icon">Edit icon</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="holiday_description">Holiday description</string>
    <string name="celebrated_from">celebrated from</string>
    <string name="canceled">Canceled</string>
    <string name="saved">Saved</string>
    <string name="lorem_ipsum">
        Тебе желаю море счастья,\n
        Улыбок, солнца и тепла.\n
        Чтоб жизнь была еще прекрасней,\n
        Не знать печали никогда!\n
        \n
        Пусть в доме будет только радость,\n
        Уют, достаток и покой.\n
        Друзья, родные будут рядом,\n
        Беда обходит стороной!\n
        \n
        Здоровья крепкого желаю\n
        И легких жизненных дорог.\n
        И пусть всегда, благословляя,\n
        Тебя хранит твой ангелок!\n
    </string>
    <string name="lorem_ipsum2">
        Тебе желаю море счастья,\n
        Улыбок, солнца и тепла.\n
        Чтоб жизнь была еще прекрасней,\n
        Не знать печали никогда!\n
    </string>
    <string name="textCounter">10/124</string>
    <string name="add_new_congratulate">Add new</string>
    <string name="share">Share</string>
    <string name="chooser_title">Send to</string>
    <string name="empty">Empty</string>
    <string name="all">Universal</string>
    <string name="forHer">For Her</string>
    <string name="forHim">For Him</string>
    <string name="favorite">Favorite</string>
    <string name="filter">Filter</string>
    <string name="text_data">March, 26</string>
    <string name="left">"left "</string>
    <string name="alarm_on">Alarm on</string>
    <string name="alarm_off">Alarm off</string>
    <string name="edit_congratulate">Edit</string>
    <string name="add_your_text">Add your congratulation text</string>
    <string name="permission_text">You need to allow access to External Storage</string>
</resources>
