<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="2"
    android:rowCount="4"
    android:padding="10dp"
    tools:context=".MyAboutDialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_column="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_email"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:textSize="10sp"
        android:layout_column="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designer"
        android:layout_column="0"
        android:layout_row="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designer_name"
        android:layout_column="1"
        android:layout_row="2"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designer_email"
        android:layout_column="1"
        android:layout_row="3"
        android:textSize="10sp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"/>


</GridLayout>
