<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/toolBarAddEditActivity"
                    layout="@layout/toolbar" />

            </android.support.design.widget.AppBarLayout>
        </android.support.design.widget.CoordinatorLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />


        <include layout="@layout/fragment_filter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_congratulate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_congratulation_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:layout_margin="3dp"
                    android:padding="6dp" />

                <Button
                    android:id="@+id/btn_congratulation_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:layout_margin="3dp"
                    android:padding="6dp" />
                <Button
                    android:id="@+id/btn_congratulation_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"
                    android:layout_margin="3dp"
                    android:padding="6dp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!--<com.google.android.gms.ads.AdView-->
    <!--android:id="@+id/adView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--android:layout_centerInParent="true"-->
    <!--ads:adSize="BANNER"-->
    <!--ads:adUnitId="@string/banner_ad_unit_id" />-->
</RelativeLayout>
