<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/toolBarSlideActivity"
                    layout="@layout/toolbar" />

            </android.support.design.widget.AppBarLayout>
        </android.support.design.widget.CoordinatorLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/chb_sms"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginRight="6dp"
                    android:checked="false"
                    android:text="SMS"
                    android:textAllCaps="true"
                    android:textColor="@color/colorWhite" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/chb_verse"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:checked="true"
                    android:text="Стихи"
                    android:textColor="@color/colorWhite" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/chb_favorite"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:checked="false"
                    android:text="Избранное"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />
            <RadioGroup
                android:id="@+id/rg_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_for_him"
                    style="@style/radioBtnWhite"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_height="wrap_content"
                    android:text="@string/forHim" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <RadioButton
                    android:id="@+id/rb_for_her"
                    style="@style/radioBtnWhite"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_height="wrap_content"
                    android:text="@string/forHer" />
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimaryDark" />

                <RadioButton
                    android:id="@+id/rb_for_all"
                    style="@style/radioBtnWhite"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="6dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/all" />
            </RadioGroup>

        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/slidePager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never" />
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
</RelativeLayout>
